Fix more deprecated API usages